--- a/compileandrun.wiki
+++ b/compileandrun.wiki
@@ -1,6 +1,6 @@
 == How to Compile and Run DPLASMA ==
 
-Version 2.0, December 22, 2012, tested with on release 1.0 (from the public repository [[https://bitbucket.org/bosilca/dague.public/commits/e0fef3754b8fffb2d6fe48c6670f22836fdbc47b]]).
+Version 2.0, December 22, 2012, tested with on release 1.0 (from the public repository [[https://bitbucket.org/bosilca/parsec.public/commits/e0fef3754b8fffb2d6fe48c6670f22836fdbc47b]]).
 
 === Tools Dependences ===
 
@@ -70,14 +70,14 @@ Hopefully, once the expected arguments are provided the output will look similar
 -- Performing Test HAVE_WD - Failed
 -- Performing Test HAVE_G3
 -- Performing Test HAVE_G3 - Failed
--- Performing Test DAGUE_ATOMIC_USE_GCC_32_BUILTINS
--- Performing Test DAGUE_ATOMIC_USE_GCC_32_BUILTINS - Failed
--- Performing Test DAGUE_ATOMIC_USE_XLC_32_BUILTINS
--- Performing Test DAGUE_ATOMIC_USE_XLC_32_BUILTINS - Failed
--- Performing Test DAGUE_ATOMIC_USE_MIPOSPRO_32_BUILTINS
--- Performing Test DAGUE_ATOMIC_USE_MIPOSPRO_32_BUILTINS - Failed
--- Performing Test DAGUE_ATOMIC_USE_SUN_32
--- Performing Test DAGUE_ATOMIC_USE_SUN_32 - Failed
+-- Performing Test PARSEC_ATOMIC_USE_GCC_32_BUILTINS
+-- Performing Test PARSEC_ATOMIC_USE_GCC_32_BUILTINS - Failed
+-- Performing Test PARSEC_ATOMIC_USE_XLC_32_BUILTINS
+-- Performing Test PARSEC_ATOMIC_USE_XLC_32_BUILTINS - Failed
+-- Performing Test PARSEC_ATOMIC_USE_MIPOSPRO_32_BUILTINS
+-- Performing Test PARSEC_ATOMIC_USE_MIPOSPRO_32_BUILTINS - Failed
+-- Performing Test PARSEC_ATOMIC_USE_SUN_32
+-- Performing Test PARSEC_ATOMIC_USE_SUN_32 - Failed
 -- Looking for OSAtomicCompareAndSwap32
 -- Looking for OSAtomicCompareAndSwap32 - not found
 -- Looking for OSAtomicCompareAndSwap64
@@ -142,8 +142,8 @@ Hopefully, once the expected arguments are provided the output will look similar
 -- Looking for gdImageGif in /opt/local/lib/libgd.dylib - not found
 -- Found OMEGA: /tools/Omega/binary/include/omega  
 -- Found PythonInterp: /opt/local/bin/python (found version "2.7.3") 
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/data_dist/matrix
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/data_dist/matrix - Done
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/data_dist/matrix
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/data_dist/matrix - Done
 -- Found PkgConfig: /opt/local/bin/pkg-config (found version "0.27.1") 
 -- checking for one of the modules 'plasma'
 -- Performing Test PLASMA_C_COMPILE_SUCCESS
@@ -155,21 +155,21 @@ Hopefully, once the expected arguments are provided the output will look similar
     PLASMA_LDFLAGS      = [-framework veclib -L/opt/PLASMA/plasma-svn/lib -lplasma -lcoreblas -lquark -llapacke -ltmg -lpthread -lm -lplasma]
     PLASMA_INCLUDE_DIRS = [/opt/PLASMA/plasma-svn/include]
     PLASMA_LIBRARY_DIRS = [/opt/PLASMA/plasma-svn/lib]
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/include
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/include - Done
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/cores
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/cores - Done
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/cores
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/cores - Done
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/lib
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/lib - Done
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/lib
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/lib - Done
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/testing
--- Generate precision dependencies in /unstable/dplasma/sandbox/dague.public/dplasma/testing - Done
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/include
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/include - Done
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/cores
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/cores - Done
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/cores
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/cores - Done
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/lib
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/lib - Done
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/lib
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/lib - Done
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/testing
+-- Generate precision dependencies in /unstable/dplasma/sandbox/parsec.public/dplasma/testing - Done
 -- Configuring done
 -- Generating done
--- Build files have been written to: /unstable/dplasma/sandbox/dague.public/build
+-- Build files have been written to: /unstable/dplasma/sandbox/parsec.public/build
 
 }}}
 
@@ -205,12 +205,12 @@ ccmake .
 }}}
 
 (notice the double c of ccmake). This is an interactive tool, that let you choose the compilation parameters. Navigate with the arrows to the parameter you want to change and hit enter to edit. Recommended parameters are:
-* DAGUE_DEBUG  OFF (and all other DAGUE_DEBUG options)
-* DAGUE_DIST_COLLECTIVES ON
-* DAGUE_DIST_WITH_MPI ON
-* DAGUE_GPU_WITH_CUDA ON                                                                                                                                                                                                                  
-* DAGUE_OMEGA_DIR OFF
-* DAGUE_PROF_* OFF (all DAGUE_PROF_ flags off)
+* PARSEC_DEBUG  OFF (and all other PARSEC_DEBUG options)
+* PARSEC_DIST_COLLECTIVES ON
+* PARSEC_DIST_WITH_MPI ON
+* PARSEC_GPU_WITH_CUDA ON                                                                                                                                                                                                                  
+* PARSEC_OMEGA_DIR OFF
+* PARSEC_PROF_* OFF (all PARSEC_PROF_ flags off)
 * DPLASMA_CALL_TRACE OFF
 * DPLASMA_GPU_WITH_MAGMA           OFF                    
 
