--- a/Home.wiki
+++ b/Home.wiki
@@ -5,13 +5,13 @@ Two moderated mailing-lists are available, one for the users and the other for t
 == How to Compile and Run DPLASMA ==
 
 * [[compileandrun|How to compile and run dplasma]]
-* [[understanding|Understanding the compilation and runtime process of DAGuE]]
-** [[compilejdf|How to write a DAGuE enabled operation by using the DAGuE compiler]]
-** [[writejdf|How to write a DAGuE enabled operation by editing the JDF file directly]]
-** [[datadistribution|How to write a program that uses a DAGuE enabled operation]] (a.k.a. "what is this data distribution thing?")
-** [[Profiling%20DAGuE-based%20applications|How to profile DAGuE applications]]
-*** [[Profiling%20DAGuE%20Applications%20with%20PAPI|Profiling DAGuE Applications with PAPI]]
-** [[PINS|How to write a PINS Module to instrument DAGuE applications]]
+* [[understanding|Understanding the compilation and runtime process of PaRSEC]]
+** [[compilejdf|How to write a PaRSEC enabled operation by using the PaRSEC compiler]]
+** [[writejdf|How to write a PaRSEC enabled operation by editing the JDF file directly]]
+** [[datadistribution|How to write a program that uses a PaRSEC enabled operation]] (a.k.a. "what is this data distribution thing?")
+** [[Profiling%20PaRSEC-based%20applications|How to profile PaRSEC applications]]
+*** [[Profiling%20PaRSEC%20Applications%20with%20PAPI|Profiling PaRSEC Applications with PAPI]]
+** [[PINS|How to write a PINS Module to instrument PaRSEC applications]]
 ** [[PaRSEC%20Trace%20Tables%20via%20Python|How to use the Python PaRSEC Trace Tables interface]]
 ** [[PaRSEC%20on%20Intel%20Xeon%20Phi%20Native%20Mode.wiki|How to run PaRSEC in Intel Xeon Phi (native mode)]]
 
